--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
     implementation "com.squareup.moshi:moshi-kotlin:1.14.0"
+    implementation 'androidx.browser:browser:1.4.0'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
